--- a/src/components/Badges/index.css
+++ b/src/components/Badges/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 .square{
     border-radius: 4px;
 }
@@ -9,6 +11,7 @@
 .square, .pill{
     padding: 0.125em 0.75em;
     font-weight: 500;
+    font-family: "Inter", system-ui;
 }
 
 .gray{
