completed 3rd component, started 4th but have not finished

--- a/src/components/Banners/index.css
+++ b/src/components/Banners/index.css
@@ -48,7 +48,7 @@
     padding: 1em 1em 1em 3em;
     position: relative;
     font-family: "Inter", system-ui;
-    border-radius 6px;
+    border-radius: 6px;
 }
 
 .banner > .description{
