--- a/src/components/Cards/index.css
+++ b/src/components/Cards/index.css
@@ -1,3 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+*, *::after, *::before{
+    box-sizing: border-box;
+}
+
+.card-cloud-icon-container{
+    background-color: #3F75FE;
+    box-shadow: 0px 4px 6px -2px #0000000D;
+    box-shadow: 0px 10px 15px -3px #0000001A;
+    border-radius: 6px;
+    padding: 0.75em; 
+    width: 3em;
+    height: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -1.5em;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+}
+
 .card-cloud-icon{
-    
+    width: 1.5em;
+    height: 1.5em;
+    color: white;
+}
+
+.card{
+    font-family: "Inter", system-ui;
+    background-color: #F9FAFB;
+    position:relative;
+    padding: 3.5em 1.5em 2em;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 384px;
+}
+
+.card:hover{
+    box-shadow: 0px 4px 25px 0px #0000001A;
+}
+
+.card-title{
+    font-size: 1.125rem;
+    color: #111827;
+    font-weight: 500;
+}
+
+.card-description{
+    font-size: 1rem;
+    color: #6B7280;
+    line-height: 1.5;
+    /* text-shadow: 0px -1px 7px #b9b9b9; */
 }
